Pick and learn instruction from object menu

--- a/art_instructions/config/instructions.yaml
+++ b/art_instructions/config/instructions.yaml
@@ -10,6 +10,7 @@ using_object:
   - PickFromFeeder
   - PickFromPolygon
   - DrillPoints
+  - VisualInspection
   - PlaceToGrid
   - PlaceToPose
   - PlaceToContainer
