Bug fixes in lab

--- a/art_instructions/config/instructions.yaml
+++ b/art_instructions/config/instructions.yaml
@@ -10,7 +10,7 @@ using_object:
   - PickFromFeeder
   - PickFromPolygon
   - DrillPoints
-#  - VisualInspection
+  - VisualInspection
   - PlaceToGrid
   - PlaceToPose
   - PlaceToContainer
